<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_10"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/todo"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:id="@+id/bottleImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todoo"
            android:src="@drawable/bottle"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/bigCountdownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="100sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:padding="16dp"
            android:elevation="10dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bottleImage"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_turn"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="#FFFFFF"
            android:padding="16dp"
            android:elevation="10dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bottleImage"
            android:layout_marginTop="20dp"/>

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/splashOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF69B4"
        android:elevation="20dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/splashLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/o"
            android:src="@drawable/logo"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/splashText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_below="@id/splashLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>